polyglot-core/src/test/resources/grammars/positive/test-lexerignore.polyglot
Package org.anarres.polyglot.test.lexerignore;

Tokens

	tok_a = 'a' ;
	@LexerIgnore
	tok_b = 'b' ;

