polyglot-core/src/test/resources/grammars/negative/test-double-token.polyglot
Package org.anarres.polyglot.test.negative ;

Tokens

	tok_a = '..' ;
	tok_b = '..' ;

